--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,28 +22,28 @@
   <div class="gallery-container text-center">
     <div class="d-flex justify-content-center imgContainer">
 
-      <div class="gallery-img mr-1">
+      <div class="gallery-img mr-1 category-filter" data-category="pies">
         <img class="img-fluid rounded-circle mr-1" src="/assets/images/priscilla-du-preez-1089411-unsplash.jpg" alt="Pie Image" id="pieImg">
         <div class="gallery-text mr-1">
           <h3>PIE!</h3>
         </div>
       </div>
 
-      <div class="gallery-img ml-1 mr-1">
+      <div class="gallery-img ml-1 mr-1 category-filter" data-category="cookies">
         <img class="img-fluid rounded-circle ml-1 mr-1" src="/assets/images/monika-grabkowska-483364-unsplash.jpg" alt="Cookie Image" id="cookieImg">
         <div class="gallery-text ml-1 mr-1">
           <h3>COOKIES!</h3>
         </div>
       </div>
 
-      <div class="gallery-img ml-1 mr-1">
+      <div class="gallery-img ml-1 mr-1 category-filter" data-category="cakes">
         <img class="img-fluid rounded-circle ml-1 mr-1" src="/assets/images/Chocolate-Peppermint-Holiday-Cake-5-598x900.jpg" alt="Cake Image" id="cakeImg">
         <div class="gallery-text ml-1 mr-1">
           <h3>CAKE!</h3>
         </div>
       </div>
 
-      <div class="gallery-img ml-1">
+      <div class="gallery-img ml-1 category-filter" data-category="other">
         <img class="img-fluid rounded-circle ml-1" src="/assets/images/OtherBaking.jpg" alt="Other Baking Image" id="otherBakingImg">
         <div class="gallery-text ml-1">
           <h3>OTHER GOODIES!</h3>
