--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,13 +15,15 @@
   <title>Holidaze Bake-Off</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--favicon-->
-  <!--link rel="shortcut icon" href="" /-->
+  <link rel="shortcut icon" href="/assets/images/favicon.png">
   <!--Bootstrap stylesheet-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <!--Font Awesome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
     crossorigin="anonymous">
+  <!--Moment-->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment-with-locales.min.js"></script>
   <!--Custom local stylesheet for common shared elements like header and footer-->
   <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/style.css" />
 
