--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -41,6 +41,28 @@
   border-color: #fff;
 }
 
+#btnHome {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  outline-color: transparent;
+  
+
+}
+#btnHome:active {
+  outline: none!important;
+  border: none;
+  outline-color: transparent;
+  }
+  
+#btnHome:focus { 
+  outline:none !important; 
+  text-decoration: none;
+  border: none;
+  box-shadow: none;
+}
+
+
 .card-container
 {
   position: relative;
