refined code to imporove moment.js functionality

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -67,7 +67,7 @@
         {{/unless}}
       {{/each}}
       <div class="card-footer  bg-dark text-white text-muted">
-        Christmas Is In {{moment "2018-12-25 00:00" "from" dfrom}}
+        Christmas is in {{days-diff "2018-12-25 00:00"}} Days!
       </div>
   </div>
     <div class="card rounded text-center ml-5 mr-5">
